web/book/tests/documentation/snapshots/documentation__book__syntax__quoted-identifiers__quoting-identifiers__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from `dir/*.parquet`\n"
---
SELECT
  *
FROM
  "dir/*.parquet"

